auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/cast_incomplete_struct.c
struct s;

extern struct s v;

int main(void) {
  
  (void)v;
  return 0;
}